Fix navbar not sticking to bottom on mobile

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -64,10 +64,10 @@ h1{
 .navbar-inverse .nav-collapse .nav  li a:hover{
   background-color: $grey;
 }
-//.navbar-fixed-bottom{
-//  position: absolute;
-//  bottom: 0px;
-//}
+
+.navbar-fixed-bottom{
+  position: fixed;
+}
 
 .dropdown-menu {
 	position: absolute;
